update: Обновил описание для endpoint'a login
